--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<!--change semantics to header and nav, added in title-->
+
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -25,8 +25,8 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" alt="Team gathered around table">
-    <!--changed semantics from div to section and article, fixed bug added in alt-->
+    <img class="hero"/>
+    
     <section>
         <article id="search-engine-optimization" class="article">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO written in the middle and content, headings, mobile compatibility, social media link building and backlink surounding" class="float-left" />
@@ -50,23 +50,23 @@
             </p>
         </article>
     </section>
-    <!--change semantics to aside, add in alt as decorative img-->
-    <aside class="benefits">
-        <aside class="benefit-img">
+   
+    <aside class="aside">
+        <aside class="aside-img">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
-        <aside class="benefit-img">
+        <aside class="aside-img">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
-        <aside class="benefit-img">
+        <aside class="aside-img">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="">
             <p>
@@ -74,7 +74,7 @@
             </p>
         </aside>
     </aside>
-    <!--change semantics to footer and h2 to span-->
+   
     <footer>
         <span>Made with ❤️️ by Horiseon</span>
         <p>
